# chou

./: Cargo.toml  LICENSE  README.md
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs  validation.rs
crates/chou/: Cargo.toml
crates/chou/benches/: parser.rs
crates/chou/src/: main.rs
crates/eldiro/: Cargo.toml
crates/eldiro/benches/: parser.rs
crates/hir/: Cargo.toml
crates/hir/src/: database.rs  lib.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs  token_kind.rs
crates/parser/: Cargo.toml
crates/parser/src/: event.rs  grammar.rs  lib.rs  parser.rs  sink.rs  source.rs
crates/parser/src/grammar/: expr.rs  stmt.rs
crates/parser/src/parser/: marker.rs  parse_error.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: lib.rs
fuzz/: .gitignore  Cargo.toml
fuzz/coverage/main/: coverage.profdata
fuzz/coverage/main/raw/: default-.gitignore.profraw  default-example.profraw  default-main.profraw
fuzz/fuzz_targets/: main.rs
