cargo-features = ["edition2024"]

[package]
name = "fuzz"
version = "0.1.0"
authors = ["Devin Alexander Torres <d@devinus.io>"]
license = "0BSD"
edition = "2024"

[package.metadata]
cargo-fuzz = true

[workspace]

[[bin]]
name = "main"
path = "fuzz_targets/main.rs"

[dependencies]
ast = { path = "../crates/ast" }
hir = { path = "../crates/hir" }
libfuzzer-sys = "0.4.7"
parser = { path = "../crates/parser" }
