cargo-features = ["edition2024"]

[package]
name = "chou"
version = "0.1.0"
authors = ["Devin Alexander Torres <d@devinus.io>"]
license = "0BSD"
edition = "2024"

[dependencies]
ast = { path = "../ast" }
hir = { path = "../hir" }
parser = { path = "../parser" }
# rustyline = "12.0.0"
reedline = "0.32.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = [
    "real_blackbox",
    "async_futures",
    "html_reports",
] }

[[bench]]
name = "parser"
harness = false
