[package]
name = "chou"
version = "0.1.0"
authors = ["Devin Alexander Torres <d@devinus.io>"]
license = "MIT-0"
edition = "2024"

[dependencies]
ast = { path = "../ast" }
hir = { path = "../hir" }
mimalloc = "0.1.46"
parser = { path = "../parser" }
reedline = "0.40.0"

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "parser"
harness = false
