cargo-features = ["edition2024"]

[package]
name = "hir"
version = "0.1.0"
authors = ["Devin Alexander Torres <d@devinus.io>"]
license = "0BSD"
edition = "2024"

[dependencies]
ast = { path = "../ast" }
la-arena = "0.3.1"
smol_str = "0.2.2"
syntax = { path = "../syntax" }

[dev-dependencies]
parser = { path = "../parser" }
