cargo-features = ["edition2024"]

[package]
name = "parser"
version = "0.1.0"
authors = ["Devin Alexander Torres <d@devinus.io>"]
license = "0BSD"
edition = "2024"

[dependencies]
drop_bomb = "0.1.5"
lexer = { path = "../lexer" }
rowan = "0.15.15"
syntax = { path = "../syntax" }
text-size = "1.1.1"

[dev-dependencies]
expect-test = "1.5.0"
